--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <title>Dota 2 quiz - Guess the Hero</title>
+    <meta
+      data-vue-meta="1"
+      name="description"
+      content="A Dota 2 quiz game. Guess the hero from items bought in a match. See the purchased items of a hero and other optional stats and use them to try to guess the hero."
+    />
     <meta property="og:title" content="Guess the Hero - Dota 2 quiz" />
     <meta
       property="og:url"
