Update files to use custom domain

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,7 @@
       content="A Dota 2 quiz game. Guess the hero from items bought in a match. See the purchased items of a hero and other optional stats and use them to try to guess the hero."
     />
     <meta property="og:title" content="Guess the Hero - Dota 2 quiz" />
-    <meta
-      property="og:url"
-      content="https://dricholm.github.io/guess-the-hero/"
-    />
+    <meta property="og:url" content="https://www.guessthehero.com/" />
     <meta
       property="og:description"
       content="A Dota 2 quiz game. Guess the hero from items bought in a match. See the purchased items of a hero and other optional stats and use them to try to guess the hero."
