--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,10 +12,7 @@
       content="A Dota 2 quiz game. Guess the hero from items bought in a match. See the purchased items of a hero and other optional stats and use them to try to guess the hero."
     />
     <meta property="og:title" content="Guess the Hero - Dota 2 quiz" />
-    <meta
-      property="og:url"
-      content="https://dricholm.github.io/guess-the-hero/"
-    />
+    <meta property="og:url" content="https://www.guessthehero.com/" />
     <meta
       property="og:description"
       content="A Dota 2 quiz game. Guess the hero from items bought in a match. See the purchased items of a hero and other optional stats and use them to try to guess the hero."
